Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -171,16 +171,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/Excise/--1675782876/type</li>
-
-<li>$:/state/Link/--848112581/search</li>
-
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -192,8 +182,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -9802,21 +9790,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200131052719399" modified="20200131052719399" title="$:/state/Excise/--1675782876/type" revision="1" bag="default">
-<pre>link</pre>
-</div>
-<div created="20200131175313752" modified="20200131175314768" title="$:/state/Link/--848112581/search" revision="5" bag="default">
-<pre>Thm 1</pre>
-</div>
-<div created="20200131052606132" modified="20200131055059561" title="$:/state/showeditpreview" revision="11" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200131055056734" modified="20200131232242690" title="$:/state/sidebar" revision="12" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200131071955492" modified="20200131155440900" title="$:/state/tab/sidebar--595412856" revision="4" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9829,7 +9802,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200131001035174" list="[[Metric Spaces]] [[Open and Closed Sets]] Completeness Compactness [[Continuous Functions]]" modified="20200131213338454" title="$:/StoryList" revision="158" bag="default">
+<div list="" title="$:/StoryList" revision="3" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9877,11 +9850,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9889,9 +9862,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200131051300269" modified="20200131051353973" title="$:/temp/search" revision="5" bag="default">
-<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10005,7 +9975,7 @@ Error message and password prompt
 <div created="20191121035138747" modified="20191121035148674" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>classic</pre>
 </div>
-<div created="20200131001213334" modified="20200131002038873" tags="[[computer science]] [[talk summary]] [[data structures]] neuroscience" title="A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta" revision="1" bag="default">
+<div created="20200131001213334" modified="20200131002039968" tags="[[computer science]] [[talk summary]] [[data structures]] neuroscience" title="A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>An intriguing primitive representation, &quot;expand-and-sparsify&quot;, appears in the olfactory system of the fly and the sensory systems of several other organisms. It maps an input vector to a much higher-dimensional sparse representation, using a random linear transformation followed by winner-take-all thresholding.
 
 I'll show that this representation has a variety of formal properties, such as (1) locality preservation,(2) universal approximation, and (3) adaptivity to manifold structure, that make it an attractive data structure for algorithms and machine learning.
@@ -10211,7 +10181,7 @@ Factors to consider:
 
 !!! Dividing Data into Training Set</pre>
 </div>
-<div created="20200131075725454" modified="20200131212322757" tags="[[metric spaces]] topology" title="Compactness" revision="6" bag="default">
+<div created="20200131075725454" modified="20200131212324049" tags="[[metric spaces]] topology" title="Compactness" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Def: A space is totally bounded if $$\forall \epsilon &gt; 0$$, there exists a finite $$\epsilon$$-net for X i.e there exist $$x_1, ..., x_n$$ s.t. every point in X is within $$\epsilon$$ of some $$x_i$$, equivalently $$X = \cup_{i = 1}^n B(x_i, \epsilon)$$
 
 Def: X is bounded if $$\exists b &gt; 0, d(x, y) &lt; b, \forall x, y \in X$$
@@ -10294,7 +10264,7 @@ Summary: The following statements are equivalent
 * X is totally bounded and complete
 </pre>
 </div>
-<div created="20200131061156893" modified="20200131161437869" tags="topology [[metric spaces]]" title="Completeness" type="text/vnd.tiddlywiki" revision="4" bag="default">
+<div created="20200131061156893" modified="20200131161439072" tags="topology [[metric spaces]]" title="Completeness" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Def: A sequence $$\{x_n\}_{n \in \bf{N}}$$ in a metric space X is //Cauchy// if for all $$\epsilon &gt; 0, \exists N, d(x_n, x_m) &lt; \epsilon, \forall n, m \geq N$$
 
 Lemma 1: A convergent sequence is cauchy
@@ -10498,7 +10468,7 @@ Millions of Instructions Per Second = Instruction Count / Execution Time * 10^6 
 
 </pre>
 </div>
-<div created="20200131075742535" modified="20200131212028137" tags="topology [[metric spaces]]" title="Continuous Functions" type="text/vnd.tiddlywiki" revision="5" bag="default">
+<div created="20200131075742535" modified="20200131212029367" tags="topology [[metric spaces]]" title="Continuous Functions" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Def: Let (X, d) and (Y, p) be metric spaces. A function f: X -&gt; Y is continuous at $$x \in X$$ if whenever $$\{x_n\}_{n \in \bf{N}}$$ converges to x, $$\{f(x_n)\}_{n \in \bf{N}}$$ converges to f(x)
 
 Def: A function is continuous if it is continuous $$\forall x \in X$$
@@ -10698,10 +10668,10 @@ If the relation is non-empty then symmetric and transitive imply reflexive.
 
 e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accurate as opposed to [[K Nearest Neighbors]], [[Linear Regression]], [[Decision Tree Learning]] are quite easy to explain but perhaps not as accurate</pre>
 </div>
-<div created="20200131001053606" modified="20200131002051541" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" revision="1" bag="default">
+<div created="20200131001053606" modified="20200131002052629" tags="xai [[artificial intelligence]] [[talk summary]]" title="Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://www.cal.cs.ucla.edu/cgi-bin/webevent.cgi?cmd=showevent&amp;ncmd=calmonth&amp;cal=cal2&amp;id=1578079202-22878-1&amp;ncals=&amp;y=2020&amp;m=01&amp;d=14&amp;token=&amp;sb=0&amp;cf=cal&amp;lc=calmonth&amp;swe=1&amp;set=1&amp;sa=0&amp;sort=e,m,t&amp;ws=0&amp;sib=1&amp;de=1&amp;tf=0</pre>
 </div>
-<div created="20200131031737678" modified="20200131051254492" tags="" title="February Learning List" revision="1" bag="default">
+<div created="20200131031737678" modified="20200131051255569" tags="" title="February Learning List" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>- Bayesian Network Course from Youtube
 - </pre>
 </div>
@@ -10954,7 +10924,7 @@ It is the fundamental basis for all functional programming languages. </pre>
 <div created="20191120053237171" modified="20191121010456596" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200131053010143" modified="20200131072905289" tags="topology [[metric spaces]]" title="Metric Spaces" revision="3" bag="default">
+<div created="20200131053010143" modified="20200131072906354" tags="topology [[metric spaces]]" title="Metric Spaces" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* [[Open and Closed Sets]]
 * [[Completeness]]
 * [[The Real Line]]
@@ -11001,7 +10971,7 @@ see also: [[Standardization of Features]]</pre>
 
 e..g: Encoding what major a college student as many dimensional vector with 1 in the index corresponding to the student's major and 0 everywhere else instead of assigning numbers 1, 2, 3 ... to the majors and implying an ordering. </pre>
 </div>
-<div created="20200131052738780" modified="20200131213350499" tags="[[metric spaces]] topology" title="Open and Closed Sets" revision="4" bag="default">
+<div created="20200131052738780" modified="20200131213352015" tags="[[metric spaces]] topology" title="Open and Closed Sets" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Def: A metric is a real valued function with the following properties:
 
 * $$d(x, y) \geq 0, \forall x, y \in X$$
@@ -11134,7 +11104,7 @@ Useful Links:
 * https://towardsdatascience.com/from-tda-to-dl-d06f234f51d
 </pre>
 </div>
-<div created="20200131073056488" modified="20200131075604641" tags="topology [[metric spaces]]" title="Products of Metric Spaces" revision="2" bag="default">
+<div created="20200131073056488" modified="20200131075605791" tags="topology [[metric spaces]]" title="Products of Metric Spaces" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Property 1: A sequence $$\{x^{(j)}\}_{j \in \bf{N}}$$ converges to x = $$(x_1, ... , x_n) \in X = X_1 \times ... \times X_n$$ iff for each k the sequence of component entries $$\{x^{(j)}_k\}_{j \in \bf{N}}$$ converges to $$x_k$$ in $$X_k$$
 
 Thm 1: Suppose that d is a metric on $$X = X_1 \times ... \times X_n$$ that satisfies property 1, then the open sets in (X, d) are unions of product sets of the form $$U_1 \times ... \times U_n$$ where $$U_i$$ is an open subset of $$X_i$$
@@ -11155,7 +11125,7 @@ Proof: Consider a cauchy sequence in the product space. Note that this implies c
 
 Corollary 3: $$\bf{R}^n$$ with the usual metric ($$l_2$$) is complete</pre>
 </div>
-<div created="20200131001522764" modified="20200131030521332" tags="[[needs formatting]] [[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" revision="6" bag="default">
+<div created="20200131001522764" modified="20200131030522424" tags="[[needs formatting]] [[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Quantum Shock - Quantum computing can solve halting problem (Ji-Natarajan)
 
 What we have so far - more reliable hardware - Sycamore, 53 qubit, Quantum Internet, Q#, Cirq, Qiskit, Quantum Hoare Logic
@@ -11259,7 +11229,7 @@ while m(p) = 1, do S od; M(p) = 1, measure p by (M0, M1)
 
 Decidability of QTL formula - programs without nondeterminism, </pre>
 </div>
-<div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191125022514242" modified="20191125022735084" tags="[[reinforcement learning]] [[machine learning]] incomplete" title="Reinforcement Learning: Introduction" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -11309,7 +11279,7 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 * [[Chapter 4 |Chapter 4 (The Hundred-Page Machine Learning Book)]]
 * [[Chapter 5 |Chapter 5 (The Hundred-Page Machine Learning Book)]]</pre>
 </div>
-<div created="20200131071610266" modified="20200131072832208" tags="topology [[metric spaces]]" title="The Real Line" revision="2" bag="default">
+<div created="20200131071610266" modified="20200131072833285" tags="topology [[metric spaces]]" title="The Real Line" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>$$\bf{R}$$ is an ordered field (discussed in [[Real Numbers]])
 
 Least Upper Bound Axiom: If S is a non-empty subset of $$\bf{R}$$ that is bounded above then S has a least upper bound (supremum)
@@ -11323,7 +11293,7 @@ Proof:
 * Therefore $$s_N + \epsilon$$ is an upper bound but then b the least upper bound must $$s_N - epsilon \leq b \leq s_N + \epsilon$$
 * But since epsilon is arbitrary can force convergence to b</pre>
 </div>
-<div created="20200131030723016" modified="20200131155508596" tags="" title="Things I want to learn about in 2020" revision="3" bag="default">
+<div created="20200131030723016" modified="20200131155509679" tags="" title="Things I want to learn about in 2020" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Machine Learning (in practice)
 * Reinforcement Learning
 * Bayesian Networks
@@ -11331,7 +11301,7 @@ Proof:
 * Modern Cryptography - https://www.microsoft.com/en-us/research/project/blockchain/, https://www.microsoft.com/en-us/research/project/multi-party-computation/
 * Research efforts in joining symbolic AI to Neural Networks</pre>
 </div>
-<div created="20200131000351410" modified="20200131051341597" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" revision="1" bag="default">
+<div created="20200131000351410" modified="20200131051342703" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]]
 # [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]]
 # [[Quantum Temporal Logic by Nengkun Yu]]
@@ -11359,7 +11329,7 @@ Proof:
 # [[Diagonalization]]
 # [[Inner Products]]</pre>
 </div>
-<div created="20200131051404804" modified="20200131072123228" tags="ongoing topology math" title="UCLA Math 121 Topology" type="text/vnd.tiddlywiki" revision="10" bag="default">
+<div created="20200131051404804" modified="20200131072124296" tags="ongoing topology math" title="UCLA Math 121 Topology" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Syllabus:
 
 # [[Metric Spaces]]
