Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -9790,6 +9792,9 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20200201055937320" modified="20200201055958408" title="$:/state/tab/sidebar--595412856" revision="4" bag="default">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9802,7 +9807,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList" revision="3" bag="default">
+<div created="20200201060004069" list="[[Metric Spaces]]" modified="20200201060008806" title="$:/StoryList" revision="10" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10924,8 +10929,10 @@ It is the fundamental basis for all functional programming languages. </pre>
 <div created="20191120053237171" modified="20191121010456596" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200131053010143" modified="20200131072906354" tags="topology [[metric spaces]]" title="Metric Spaces" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>* [[Open and Closed Sets]]
+<div created="20200131053010143" modified="20200201060130483" tags="topology [[metric spaces]]" title="Metric Spaces" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<pre>Def: A metric space is a set with a metric on it (a metric is like a distance function, rigorous definition in first link)
+
+* [[Open and Closed Sets]]
 * [[Completeness]]
 * [[The Real Line]]
 * [[Products of Metric Spaces]]
